resources/sass/_company.scss
.company-header {
    display: inline;
    font-weight: 500;
    margin-left: 5%;
    margin-right: 5%;
    padding: 10px 15px 10px 15px;
    cursor: pointer;

    &:hover {
        background-color: #F9F9F9;
    }
}
.job-summary {
    background-color: rgb(249, 249, 249);
    padding: 16px;
    border-radius: 8px;
    margin-top: 14px;
}
.post-action {
    display: inline;
    font-size: 14px;
    margin-right: 20px;
    padding: 10px 15px;
    font-weight: 500;
    cursor: pointer;

    .like {
        margin-top: -2px;
        margin-right: 4px;
    }
    
    &:hover {
        background-color: #F9F9F9;
    }
}
.job-action {
    margin: 32px 0;
    font-size: 14px;
    color: #6b7172;
}
.job-filter {
    margin-left: 10px;
}
.job-sort {
    position: absolute;
    right: 0;
    top: 8px;
}
.job-recent {
    border-radius: 14.5px;
    box-shadow: 0 0 3.5px 0 rgba(33, 49, 60, 0.08);
    background-color: #ffffff;
    padding: 5px 10px;
    color: #a2b2b7;
    font-weight: 500;
    cursor: pointer;
}
.save-icon {
    position: absolute;
    right: 30px;
    margin-top: -5px;
    cursor: pointer;
}
.star-cont {
    margin-top: -15px;
    margin-left: 3px;
}
.star {
    visibility: hidden;
    font-size: 28px;
    cursor: pointer;
}
.star:before {
   content: "\2606";
   visibility: visible;
}
.star:checked:before {
   content: "\2605";
   color: $brand;
}
.header-active {
    color: $brand;
}
.header-inactive {
    color: #777777;
}
.comp-label {
    font-size: 15px;
    font-weight: 600;
    color: #383d3f;
    margin-top: 25px;
    margin-bottom: -16px;
}
.comp-label-2 {
    font-size: 15px;
    font-weight: 600;
    color: #383d3f;
    margin-top: 20px;
    margin-bottom: 18px;
}
.comp-label-3 {
    font-size: 15px;
    font-weight: 500;
    line-height: 1.47;
    color: #a2b2b7;
    margin-top: 14px;
    margin-bottom: -8px;
}
.comp-row {
    position: relative;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 28px;
}
.comp-logo {
    width: 100px;
    height: 100px;
    border-radius: 8px;
    box-shadow: 0 0 0.5px 0 rgba(0, 0, 0, 0.19), 0 2px 12px 0 rgba(57, 86, 101, 0.12);
    position: relative;
    background-color: #d9e3e6;
    margin-top: 30px;
  
    img {
        overflow: hidden;
        border-radius: 8px;
    }
}
.comp-button-1 {
    width: 143px;
    height: 33px;
    border-radius: 8px;
    border: 2px solid rgb(151, 151, 151);
    text-align: center;
    margin-top: 35px;
    margin-left: 28px;
    cursor: pointer;

    p {
        padding-top: 3px;
        font-size: 14px;
        color: #61686b;
    }

    &:hover {
        border: 2px solid #000;
        
        p {
            color: #000;
        }
    }
}
.comp-button-2 {
    width: 146px;
    height: 34px;
    border-radius: 8px;
    background-color: $brand;
    text-align: center;
    margin-top: 20px;
    margin-left: 28px;
    cursor: pointer;
    transition: background-color 0.33s ease-in-out, background-image 0.33s ease-in-out;

    p {
        padding-top: 5px;
        font-size: 15px;
        font-weight: 500;
        color: #ffffff;
    }

    &:hover {
        background-color: $brand-dark;
    }
}
.comp-nophoto-label {
    margin-left: 15px;
    margin-top: 37px;
    font-size: 16px;
    // color: #000000;
}
.comp-progress {
    text-align: center;
    margin: 20px 45px 4px 45px;
}
.comp-card-wrapper {
    display: inline-flex;
    list-style-type: none;
    padding: 0;

    li.comp-card-list {
        visibility: hidden;
        will-change: transform;
        transform: translate(var(--x, 0%), var(--y, 0%));
        transition: transform 300ms ease-out;
        overflow: auto;
        height: 440px;

        &.current {
            visibility: visible;
        }
    }

    .locations-wrapper {
        padding-top: 0px;
        border: 1px solid rgba(0, 0, 0, 0.125);
        border-radius: 0.25rem;

        p {
            width: 100%;
            padding: 10px;
            font-size: 14px;
            border-bottom: 1px solid rgba(0, 0, 0, 0.125);
            margin-bottom: 0px;

            &:hover {
                cursor: pointer;
                color: #fff;
                background-color: $brand;
            }
        }
    }
}
.div-form {
    overflow: hidden;
}
#myProgress {
    margin-top: 30px;
    width: 100%;
    background-color: linear-gradient(to right, $brand-dark 0%, $brand-dark 0%, #bdc3c7 100%, #fff 100%);;
}
#myBar {
    width: 0%;
    border-radius: 8px;
    height: 4px;
    background-color: $brand-dark;
}

